objects/PlateQueue__c.object
<CustomObject>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plate_Number__c</fullName>
        <label>Plate Number</label>
        <length>6</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Plate_Queue_Batch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plate Queue Batch</label>
        <referenceTo>Plate_Queue_Batch__c</referenceTo>
        <relationshipLabel>Plate Queues</relationshipLabel>
        <relationshipName>Plate_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_to_NZTA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to NZTA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Received - Valid</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Received - Not Valid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VIN__c</fullName>
        <formula>Vehicle__r.VIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vehicle</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Vehicle__c.VIN__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Plate Queues</relationshipLabel>
        <relationshipName>Plate_Queues</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Plate Queue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Plate_Number__c</columns>
        <columns>Date_Sent__c</columns>
        <columns>Date_Received__c</columns>
        <columns>VIN__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PQ-{000000}</displayFormat>
        <label>Auto Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plate Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>